// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sets a new state 1`] = `
Object {
  "classifier": Object {
    "annotations": Object {},
    "classification": Object {},
    "currentWorkflowId": 0,
    "guide": Object {},
    "inPreviewMode": false,
    "isFailure": false,
    "isFetching": false,
    "isSuccess": false,
    "needsTutorial": Object {},
    "nextSubject": Object {},
    "project": Object {},
    "questionContainerHeight": Object {},
    "seenThisSession": Object {},
    "subject": Object {},
    "tasks": Object {},
    "tutorial": Object {},
    "upcomingSubjects": Object {},
    "workflow": Object {},
  },
  "main": Object {
    "bobLoblaw": "Has a law blog",
    "errorMessage": null,
    "isConnected": null,
    "isFetching": false,
    "notificationPayload": Object {},
    "notificationProject": Object {},
    "notifications": Object {
      "general": true,
    },
    "pushEnabled": false,
    "pushPrompted": false,
    "registration": Object {
      "global_email_communication": true,
    },
    "selectedDiscipline": null,
    "session": Object {},
    "settings": Object {
      "promptForWorkflow": false,
    },
    "webViewNavCounter": 0,
  },
  "navBar": Object {
    "backgroundColors": Object {},
    "titles": Object {},
  },
  "projects": Object {
    "collaboratorIds": Array [],
    "isFailure": false,
    "isLoading": false,
    "isSuccess": false,
    "ownerIds": Array [],
    "previewProjectList": Array [],
    "projectList": Array [],
  },
  "user": Object {},
}
`;

exports[`sets state from initial state 1`] = `
Object {
  "classifier": Object {
    "annotations": Object {},
    "classification": Object {},
    "currentWorkflowId": 0,
    "guide": Object {},
    "inPreviewMode": false,
    "isFailure": false,
    "isFetching": false,
    "isSuccess": false,
    "needsTutorial": Object {},
    "nextSubject": Object {},
    "project": Object {},
    "questionContainerHeight": Object {},
    "seenThisSession": Object {},
    "subject": Object {},
    "tasks": Object {},
    "tutorial": Object {},
    "upcomingSubjects": Object {},
    "workflow": Object {},
  },
  "main": Object {
    "errorMessage": null,
    "isConnected": true,
    "isFetching": false,
    "notificationPayload": Object {},
    "notificationProject": Object {},
    "notifications": Object {
      "general": true,
    },
    "pushEnabled": false,
    "pushPrompted": false,
    "registration": Object {
      "global_email_communication": true,
    },
    "selectedDiscipline": null,
    "session": Object {},
    "settings": Object {
      "promptForWorkflow": false,
    },
    "webViewNavCounter": 0,
  },
  "navBar": Object {
    "backgroundColors": Object {},
    "titles": Object {},
  },
  "projects": Object {
    "collaboratorIds": Array [],
    "isFailure": false,
    "isLoading": false,
    "isSuccess": false,
    "ownerIds": Array [],
    "previewProjectList": Array [],
    "projectList": Array [],
  },
  "user": Object {},
}
`;

exports[`sets user 1`] = `
Object {
  "classifier": Object {
    "annotations": Object {},
    "classification": Object {},
    "currentWorkflowId": 0,
    "guide": Object {},
    "inPreviewMode": false,
    "isFailure": false,
    "isFetching": false,
    "isSuccess": false,
    "needsTutorial": Object {},
    "nextSubject": Object {},
    "project": Object {},
    "questionContainerHeight": Object {},
    "seenThisSession": Object {},
    "subject": Object {},
    "tasks": Object {},
    "tutorial": Object {},
    "upcomingSubjects": Object {},
    "workflow": Object {},
  },
  "main": Object {
    "errorMessage": null,
    "isConnected": null,
    "isFetching": false,
    "notificationPayload": Object {},
    "notificationProject": Object {},
    "notifications": Object {
      "general": true,
    },
    "pushEnabled": false,
    "pushPrompted": false,
    "registration": Object {
      "global_email_communication": true,
    },
    "selectedDiscipline": null,
    "session": Object {},
    "settings": Object {
      "promptForWorkflow": false,
    },
    "user": Object {
      "avatar": "Some avatar",
      "display_name": "Me",
    },
    "webViewNavCounter": 0,
  },
  "navBar": Object {
    "backgroundColors": Object {},
    "titles": Object {},
  },
  "projects": Object {
    "collaboratorIds": Array [],
    "isFailure": false,
    "isLoading": false,
    "isSuccess": false,
    "ownerIds": Array [],
    "previewProjectList": Array [],
    "projectList": Array [],
  },
  "user": Object {},
}
`;

exports[`unsets user 1`] = `
Object {
  "classifier": Object {
    "annotations": Object {},
    "classification": Object {},
    "currentWorkflowId": 0,
    "guide": Object {},
    "inPreviewMode": false,
    "isFailure": false,
    "isFetching": false,
    "isSuccess": false,
    "needsTutorial": Object {},
    "nextSubject": Object {},
    "project": Object {},
    "questionContainerHeight": Object {},
    "seenThisSession": Object {},
    "subject": Object {},
    "tasks": Object {},
    "tutorial": Object {},
    "upcomingSubjects": Object {},
    "workflow": Object {},
  },
  "main": Object {
    "errorMessage": null,
    "isConnected": null,
    "isFetching": false,
    "notificationPayload": Object {},
    "notificationProject": Object {},
    "notifications": Object {
      "general": true,
    },
    "pushEnabled": false,
    "pushPrompted": false,
    "registration": Object {
      "global_email_communication": true,
    },
    "selectedDiscipline": null,
    "session": Object {},
    "settings": Object {
      "promptForWorkflow": false,
    },
    "user": Object {},
    "webViewNavCounter": 0,
  },
  "navBar": Object {
    "backgroundColors": Object {},
    "titles": Object {},
  },
  "projects": Object {
    "collaboratorIds": Array [],
    "isFailure": false,
    "isLoading": false,
    "isSuccess": false,
    "ownerIds": Array [],
    "previewProjectList": Array [],
    "projectList": Array [],
  },
  "user": Object {},
}
`;
